@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - added transactional approach to ZABBIX server (Alexei)
  - new definition of parameter StartTrappers (Alexei)
  - new definition of parameter StartPollers (Alexei)
  - new parameter StartPingers for server (Alexei)
